--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "it": "^1.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-rsa": "^1.1.1"
   },
   "name": "jwksserver",
   "version": "1.0.0",
